leos-pizza-manifests/pizza-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: leos-pizza-service
  namespace: pizza
  labels:
    app: leos-pizza
spec:
  type: LoadBalancer  
  ports:
    - port: 80        
      targetPort: 8000  
      protocol: TCP
  selector:
    app: leos-pizza
