leos-pizza-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leos-pizza-ingress
  namespace: pizza
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
    - host: leospizza.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leos-pizza-service
                port:
                  number: 80
